force-app/main/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>기술자 수 기반 연간 계약금액 자동계산</description>
    <formula>IF( Technician_Count__c &lt;= 50, Technician_Count__c * 49 * 12,
IF( Technician_Count__c &lt;= 200, Technician_Count__c * 39 * 12,
Technician_Count__c * 29 * 12 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV (Annual Contract Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>