force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <description>내부에서 우리 솔루션을 지지하는 담당자</description>
    <label>Champion</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>