force-app/main/default/objects/Opportunity/fields/Contract_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>계약서 검토 완료 여부</description>
    <label>Contract Reviewed</label>
    <type>Checkbox</type>
</CustomField>