force-app/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>고객의 솔루션 선택 기준</description>
    <label>Decision Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>