force-app/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <description>고객사 내부 의사결정 프로세스 및 타임라인</description>
    <label>Decision Process</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>