force-app/main/default/objects/Opportunity/fields/Discount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>할인 승인 프로세스 완료 여부</description>
    <label>Discount Approved</label>
    <type>Checkbox</type>
</CustomField>