force-app/main/default/objects/Opportunity/fields/Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Discount_Pct__c</fullName>
    <description>할인율(%). 15% 초과 시 VP 승인, 25% 초과 시 CEO 승인 트리거</description>
    <label>Discount %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>