force-app/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <description>최종 예산 승인권자 이름 및 역할</description>
    <label>Economic Buyer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>