force-app/main/default/objects/Opportunity/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <description>고객이 겪는 핵심 문제 및 비즈니스 임팩트</description>
    <label>Identify Pain</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>