force-app/main/default/objects/Opportunity/fields/MEDDIC_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDIC_Score__c</fullName>
    <description>MEDDIC 6개 필드 중 입력된 필드 비율(완성도 %)</description>
    <label>MEDDIC Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>