force-app/main/default/objects/Opportunity/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>고객이 측정하는 성공 지표 (예: 기술자 배정 시간 30% 단축)</description>
    <label>Metrics</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>