force-app/main/default/objects/Opportunity/fields/Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Product_Tier__c</fullName>
    <description>딜의 제품 요금제 티어. Closed Won 전환 시 Service_Contract__c.Tier__c와 SLA_Hours__c 산정에 사용됨 (Service_Contract__c.Tier__c와 동일한 값셋)</description>
    <label>Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>