force-app/main/default/objects/Opportunity/fields/Technician_Count__c.field-meta.xml
<CustomField>
    <fullName>Technician_Count__c</fullName>
    <description>계약 대상 기술자 수 (ACV 계산 기준)</description>
    <label>Technician Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>