force-app/main/default/objects/Opportunity/validationRules/Demo_TechnicianCount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Demo_TechnicianCount_Required</fullName>
    <active>true</active>
    <description>Demo/Solution Fit 단계에서 기술자 수(Technician_Count__c) 필수 입력</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &apos;Demo/Solution Fit&apos;),
    ISBLANK(Technician_Count__c)
)</errorConditionFormula>
    <errorDisplayField>Technician_Count__c</errorDisplayField>
    <errorMessage>Demo/Solution Fit 단계에서는 기술자 수(Technician Count)를 반드시 입력해야 합니다.</errorMessage>
</ValidationRule>