force-app/main/default/objects/Opportunity/validationRules/Proposal_Discount_Approval_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposal_Discount_Approval_Required</fullName>
    <active>true</active>
    <description>Proposal/Negotiation 단계에서 할인율 15% 초과 시 승인(Discount_Approved__c=true) 없이는 진입 불가. Discount_Pct__c는 수식 안에서 100으로 나뉘므로 비교값은 소수(0.15)로 써야 한다.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &apos;Proposal/Negotiation&apos;),
    Discount_Pct__c &gt; 0.15,
    Discount_Approved__c = false
)</errorConditionFormula>
    <errorDisplayField>Discount_Pct__c</errorDisplayField>
    <errorMessage>할인율이 15%를 초과하는 경우 VP 승인 후 Proposal 단계로 이동할 수 있습니다.</errorMessage>
</ValidationRule>