force-app/main/default/objects/Opportunity/listViews/My_Closing_Soon.listView-meta.xml
<ListView>
    <fullName>My_Closing_Soon</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>My Closing Soon</label>
</ListView>